--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "smoothscroll-polyfill": "^0.4.4"
   },
   "scripts": {
-    "develop": "gatsby develop --prefix-paths",
-    "build": "npm run clean && gatsby build --prefix-paths",
+    "develop": "gatsby develop",
+    "build": "npm run clean && gatsby build",
     "deploy": "gatsby build && gh-pages -d public -b main",
-    "serve": "gatsby serve --prefix-paths",
+    "serve": "gatsby serve",
     "clean": "rimraf .cache public",
     "format": "prettier --write '**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
