--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "smoothscroll-polyfill": "^0.4.4"
   },
   "scripts": {
-    "develop": "gatsby develop --prefix-paths",
+    "develop": "gatsby develop",
     "build": "npm run clean && gatsby build --prefix-paths",
     "deploy": "gatsby build && gh-pages -d public -b main",
     "serve": "gatsby serve --prefix-paths",
