--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "email": "cmoraisfonseca@unibz.it"
   },
   "dependencies": {
-    "gatsby": "^2.4.3",
-    "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sass": "^2.0.11",
-    "node-sass": "^4.12.0",
+    "bootstrap": "4.3.1",
+    "gatsby": "^4.2.0",
+    "gatsby-plugin-manifest": "^4.2.0",
+    "gatsby-plugin-react-helmet": "^5.2.0",
+    "gatsby-plugin-sass": "^5.2.0",
+    "jquery": "^3.6.0",
+    "node-sass": "^6.0.1",
+    "popper.js": "^1.16.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
