--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
+# Project dependencies
+.cache
+node_modules
+yarn-error.log
+package-lock.json
+yarn.lock
 
-.cache/
-
-.vscode/
-
-.DS_Store
+# Build directory
+/public
+**/.DS_Store
+**/.vscode/
